went back to 24.0.1-amzn and mvn exec:java
Signed-off-by: Konstantin Läufer <laufer@cs.luc.edu>