@@ -1,3 +1,3 @@
 #!/bin/bash
 
-java --enable-preview -cp target/aoc2023-0.1-SNAPSHOT.jar Day5
+mvn exec:java -Dexec.mainClass=Day5
